# kyronmedical

./: .gitignore  README.md  SETUP.md
backend/: .env.example  main.py  pyproject.toml  test_chat.py  test_chat_json.py
backend/api/: call.py  chat.py  voice_stream.py  webhook.py
backend/data/: doctors.py  kyron.db
backend/services/: db.py  guardrails.py  matcher.py  notifications.py  session.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/doctors/: page.tsx
frontend/src/app/services/: page.tsx
frontend/src/components/: AppointmentCard.tsx  CallButton.tsx  ChatInput.tsx  ChatInterface.tsx  MessageBubble.tsx  PatientIntakeForm.tsx  TypingIndicator.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts
nginx/: kyron-api.service  kyron.conf
